rename qos to sync/stream as appropriate
